--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -24,6 +24,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^10.18.0",
     "lucide-react": "0.456.0",
     "next": "^14.0.4",
     "next-themes": "^0.4.3",
