--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,7 +9,10 @@
     "start": "next start",
     "lint": "next lint",
     "export": "next build && next export",
-    "type-check": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "cloudflare:build": "pnpm dlx @cloudflare/next-on-pages",
+    "cloudflare:preview": "CLOUDFLARE_PROJECT_NAME=agentichub pnpm dlx wrangler pages dev",
+    "cloudflare:deploy": "CLOUDFLARE_PROJECT_NAME=agentichub pnpm dlx wrangler pages deploy --branch main"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.2",
