--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "private": true,
   "scripts": {
+    "clean": "git clean -xdf .turbo node_modules",
     "lint": "eslint . --max-warnings 0"
   },
   "dependencies": {
