feat: add typecheck scripts to package.json and turbo.json
- Introduced a new "typecheck" script in both the ui and web packages to facilitate TypeScript type checking.
- Updated turbo.json to include outputs for the typecheck task, enhancing build process efficiency.

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "scripts": {
     "clean": "git clean -xdf .turbo node_modules",
-    "lint": "eslint . --max-warnings 0"
+    "lint": "eslint . --max-warnings 0",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.2",
