--- a/turbo.json
+++ b/turbo.json
@@ -10,6 +10,11 @@
     "lint": {
       "dependsOn": ["^lint"]
     },
+    "typecheck": {
+      "outputs": [
+        "node_modules/.cache/tsbuildinfo.json"
+      ]
+    },
     "check-types": {
       "dependsOn": ["^check-types"]
     },
