--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -32,10 +32,20 @@
     "lucide-react": "0.456.0",
     "next": "^14.0.4",
     "next-themes": "^0.4.3",
+    "postcss-load-config": "^6.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^2.5.5",
     "zustand": "^4.4.7"
+  },
+  "eslintConfig": {
+    "root": true,
+    "extends": [
+      "@workspace/eslint-config/base",
+      "@workspace/eslint-config/nextjs",
+      "@workspace/eslint-config/react",
+      "@workspace/eslint-config/apps"
+    ]
   },
   "devDependencies": {
     "@types/node": "^20",
