--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "0.456.0",
     "next-themes": "^0.4.3",
+    "postcss-load-config": "^6.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^2.5.4",
@@ -41,6 +42,14 @@
     "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3"
   },
+  "eslintConfig": {
+    "root": true,
+    "extends": [
+      "@workspace/eslint-config/base",
+      "@workspace/eslint-config/react"
+    ]
+  },
+  "prettier": "@kit/prettier-config",
   "exports": {
     "./globals.css": "./src/styles/globals.css",
     "./postcss.config": "./postcss.config.mjs",
