--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "dev": "turbo dev",
     "lint": "turbo lint",
     "typecheck": "turbo typecheck --cache-dir=.turbo",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "turbo format --cache-dir=.turbo --continue -- --cache --cache-location='node_modules/.cache/.prettiercache' --ignore-path='../../.gitignore'"
   },
-  "devDependencies": {
+  "dependencies": {
     "@workspace/eslint-config": "workspace:*",
     "@workspace/typescript-config": "workspace:*",
+    "@turbo/gen": "^2.3.0",
     "prettier": "^3.2.5",
     "turbo": "^2.3.0",
     "typescript": "5.5.4"
   },
+  "prettier": "@workspace/prettier-config",
   "packageManager": "pnpm@9.12.3",
   "engines": {
     "node": ">=20"
