--- a/turbo.json
+++ b/turbo.json
@@ -10,13 +10,14 @@
     "lint": {
       "dependsOn": ["^lint"]
     },
-    "typecheck": {
-      "outputs": [
-        "node_modules/.cache/tsbuildinfo.json"
-      ]
+    "format": {
+      "dependsOn": ["^format"]
     },
     "check-types": {
       "dependsOn": ["^check-types"]
+    },
+    "typecheck": {
+      "dependsOn": ["^typecheck"]
     },
     "dev": {
       "cache": false,
