--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -20,12 +20,15 @@
     "@radix-ui/react-tooltip": "^1.1.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^10.18.0",
     "lucide-react": "0.456.0",
+    "motion": "^12.0.5",
+    "next": "^14.0.4",
     "next-themes": "^0.4.3",
     "postcss-load-config": "^6.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind-merge": "^2.5.4",
+    "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
