refactor: update project structure and component imports
- Replaced workspace UI imports with local component paths for better organization
- Updated package.json scripts to use pnpm for building and development
- Removed turbo.json configuration file as it is no longer needed
- Cleaned up pnpm-lock.yaml by removing unused workspace dependencies
- Adjusted Tailwind and PostCSS configurations to align with new component structure
- Enhanced TypeScript configuration for improved type safety and module resolution

--- a/apps/web/components.json
+++ b/apps/web/components.json
@@ -4,8 +4,8 @@
   "rsc": true,
   "tsx": true,
   "tailwind": {
-    "config": "../../packages/ui/tailwind.config.ts",
-    "css": "../../packages/ui/src/styles/globals.css",
+    "config": "./tailwind.config.ts",
+    "css": "./app/globals.css",
     "baseColor": "zinc",
     "cssVariables": true
   },
@@ -14,7 +14,7 @@
     "components": "@/components",
     "hooks": "@/hooks",
     "lib": "@/lib",
-    "utils": "@workspace/ui/lib/utils",
-    "ui": "@workspace/ui/components"
+    "utils": "@/lib/utils",
+    "ui": "@/components/ui"
   }
 }
