--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -25,7 +25,7 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.6",
-    "@workspace/ui": "workspace:*",
+    
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -41,20 +41,14 @@
   },
   "eslintConfig": {
     "root": true,
-    "extends": [
-      "@workspace/eslint-config/base",
-      "@workspace/eslint-config/nextjs",
-      "@workspace/eslint-config/react",
-      "@workspace/eslint-config/apps"
-    ]
+    "extends": ["next", "next/core-web-vitals", "eslint:recommended"]
   },
-  "prettier": "@workspace/prettier-config",
+  "prettier": "prettier-config-standard",
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "@workspace/eslint-config": "workspace:^",
-    "@workspace/typescript-config": "workspace:*",
+    
     "autoprefixer": "^10.4.16",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
