--- a/package.json
+++ b/package.json
@@ -3,23 +3,17 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "build": "turbo build",
+    "build": "pnpm --filter web build",
     "clean": "git clean -xdf node_modules dist .next",
-    "clean:workspaces": "turbo clean",
-    "dev": "turbo dev",
-    "lint": "turbo lint",
-    "typecheck": "turbo typecheck --cache-dir=.turbo",
-    "format": "turbo format --cache-dir=.turbo --continue -- --cache --cache-location='node_modules/.cache/.prettiercache' --ignore-path='../../.gitignore'"
+    "dev": "pnpm --filter web dev",
+    "lint": "pnpm --filter web lint",
+    "typecheck": "pnpm --filter web typecheck",
+    "format": "prettier --check \"**/*.{js,cjs,mjs,ts,tsx,md,json}\""
   },
   "dependencies": {
-    "@workspace/eslint-config": "workspace:*",
-    "@workspace/typescript-config": "workspace:*",
-    "@turbo/gen": "^2.3.0",
     "prettier": "^3.2.5",
-    "turbo": "^2.3.0",
     "typescript": "5.5.4"
   },
-  "prettier": "@workspace/prettier-config",
   "packageManager": "pnpm@9.12.3",
   "engines": {
     "node": ">=20"
