--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -25,7 +25,6 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.6",
-    
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -37,22 +36,26 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7",
     "zustand": "^4.4.7"
   },
   "eslintConfig": {
     "root": true,
-    "extends": ["next", "next/core-web-vitals", "eslint:recommended"]
+    "extends": [
+      "next",
+      "next/core-web-vitals",
+      "eslint:recommended"
+    ]
   },
   "prettier": "prettier-config-standard",
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    
     "autoprefixer": "^10.4.16",
     "postcss": "^8",
+    "prettier": "^3.3.3",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "prettier": "^3.3.3"
+    "typescript": "^5"
   }
 }
