chore: update CI configuration for improved build process
- Adjusted .gitlab-ci.yml to ensure pnpm install is executed in the correct directory.
- Enhanced public directory management by removing existing public folder before copying new build outputs.
- Streamlined the build process for better artifact handling.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,12 +23,12 @@ stages:
 build:pages:
   stage: build
   script:
-    - pnpm install --frozen-lockfile
     - cd apps/web
+    - pnpm install --frozen-lockfile
     - pnpm export
-    - cd ..
-    - mkdir -p ../public
-    - cp -r web/out/* ../public
+    - cd ../..
+    - rm -rf public && mkdir -p public
+    - cp -r apps/web/out/* public
   artifacts:
     paths:
       - public
