chore: update CI configuration to allow non-frozen lockfile installation
- Modified .gitlab-ci.yml to use pnpm install with --no-frozen-lockfile for improved dependency management during the build process.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,7 +24,7 @@ build:pages:
   stage: build
   script:
     - cd apps/web
-    - pnpm install --frozen-lockfile
+    - pnpm install --no-frozen-lockfile
     - pnpm export
     - cd ../..
     - rm -rf public && mkdir -p public
