--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,7 @@ build:pages:
   script:
     - cd apps/web
     - pnpm install --no-frozen-lockfile
-    - pnpm export
+    - pnpm build
     - cd ../..
     - rm -rf public && mkdir -p public
     - cp -r apps/web/out/* public
