chore: add .nojekyll file to public directory in CI configuration
- Updated .gitlab-ci.yml to create a .nojekyll file in the public directory to ensure proper handling of static site generation.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,6 +29,7 @@ build:pages:
     - cd ../..
     - rm -rf public && mkdir -p public
     - cp -r apps/web/out/* public
+    - touch public/.nojekyll
   artifacts:
     paths:
       - public
