--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,51 +1,64 @@
-image: node:20-alpine
-
-variables:
-  PNPM_HOME: "/root/.local/share/pnpm"
-  NEXT_PUBLIC_BASE_PATH: "/$CI_PROJECT_NAME"
-  # GitLab Pages requires the artifacts to be placed in ./public
+image: node:18
 
 cache:
-  key: ${CI_COMMIT_REF_SLUG}
+  key:
+    files:
+      - pnpm-lock.yaml
   paths:
     - .pnpm-store
-
-before_script:
-  - corepack enable
-  - corepack prepare pnpm@9.12.3 --activate
-  - pnpm config set store-dir .pnpm-store
-  - pnpm -v
 
 stages:
   - build
   - deploy
 
-build:pages:
+variables:
+  NODE_ENV: production
+  PNPM_CACHE_FOLDER: .pnpm-store
+
+before_script:
+  - corepack enable
+  - corepack prepare pnpm@latest --activate
+  - pnpm config set store-dir .pnpm-store
+  - pnpm install --frozen-lockfile
+
+build:
   stage: build
   script:
-    - cd apps/web
-    - pnpm install --no-frozen-lockfile
-    - pnpm build
-    - cd ../..
-    - rm -rf public && mkdir -p public
-    - cp -r apps/web/out/* public
-    - touch public/.nojekyll
+    - pnpm run build
   artifacts:
     paths:
-      - public
-    expire_in: 1 week
+      - out/
+    expire_in: 1 hour
   only:
-    - branches
+    - main
+    - merge_requests
 
 pages:
   stage: deploy
-  dependencies:
-    - build:pages
   script:
-    - echo "Deploying GitLab Pages"
+    - cp -r out/* public/
   artifacts:
     paths:
       - public
+    expire_in: never
   only:
     - main
+  # Ensure public access
+  environment:
+    name: production
+    url: $CI_PAGES_URL
+    
 
+# Optional: Deploy to staging for merge requests
+pages:staging:
+  stage: deploy
+  script:
+    - cp -r out/* public/
+  artifacts:
+    paths:
+      - public
+  environment:
+    name: staging
+    url: https://$CI_PROJECT_NAME-staging.gitlab.io
+  only:
+    - merge_requests 
