--- a/package.json
+++ b/package.json
@@ -1,21 +1,59 @@
 {
-  "name": "shadcn-ui-monorepo",
+  "name": "web",
   "version": "0.0.1",
+  "type": "module",
   "private": true,
   "scripts": {
-    "build": "pnpm --filter web build",
-    "clean": "git clean -xdf node_modules dist .next",
-    "dev": "pnpm --filter web dev",
-    "lint": "pnpm --filter web lint",
-    "typecheck": "pnpm --filter web typecheck",
-    "format": "prettier --check \"**/*.{js,cjs,mjs,ts,tsx,md,json}\""
+    "dev": "next dev",
+    "build": "next build",
+    "clean": "git clean -xdf .next .turbo node_modules",
+    "start": "next start",
+    "lint": "next lint",
+    "format": "prettier --check \"**/*.{js,cjs,mjs,ts,tsx,md,json}\"",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "prettier": "^3.2.5",
-    "typescript": "5.5.4"
+    "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-collapsible": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-separator": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tabs": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.6",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^10.18.0",
+    "lucide-react": "0.456.0",
+    "next": "^14.0.4",
+    "next-themes": "^0.4.3",
+    "postcss-load-config": "^6.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7"
   },
-  "packageManager": "pnpm@9.12.3",
-  "engines": {
-    "node": ">=20"
+  "eslintConfig": {
+    "root": true,
+    "extends": [
+      "next",
+      "next/core-web-vitals",
+      "eslint:recommended"
+    ]
+  },
+  "prettier": "prettier-config-standard",
+  "devDependencies": {
+    "@types/node": "^20",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "autoprefixer": "^10.4.16",
+    "eslint-config-next": "^15.5.3",
+    "postcss": "^8",
+    "prettier": "^3.3.3",
+    "prettier-config-standard": "^7.0.0",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
